added functions to model

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
       <i class="fa fa-spin fa-spinner"></i>
     </div>
 
-    <table id="game-table">
-      <thead id="categories"></thead>
-      <tbody id="q-section"></tbody>
-    </table>
+    <div id="game-board" class="game-board"></div>
 
     <script src="https://unpkg.com/jquery"></script>
     <script src="https://unpkg.com/axios/dist/axios.js"></script>
