--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <button id="start-reset-bttn">Start!</button>
     </header>
 
-    <div id="spin-container">
+    <div id="spin-container" style="display: none">
       <i class="fa fa-spin fa-spinner"></i>
     </div>
 
