added points attribute and implimented check for at least 5 clues

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       <h1>Jeopardy!</h1>
       <button id="start-reset-bttn">Start!</button>
     </header>
+    <div id="clue-window" style="display: none">
+      <h1 id="clue-text"></h1>
+      <span class="answer-text">What is </span
+      ><input type="text" required /><span class="answer-text"> ?</span>
+    </div>
 
     <div id="spin-container" style="display: none">
       <i class="fa fa-spin fa-spinner"></i>
