--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
   <body>
     <header>
       <h1>Jeopardy!</h1>
-      <button id="start-reset-bttn">Start!</button>
+      <span>Score: <span id="score"></span>0</span>
+      <button id="start-reset-bttn">New Game</button>
     </header>
     <div id="clue-window" style="display: none">
       <h1 id="clue-text"></h1>
       <span class="answer-text">What is </span
-      ><input type="text" required /><span class="answer-text"> ?</span>
+      ><input id="answer" type="text" required /><span class="answer-text">
+        ?</span
+      >
+      <button id="submit-answer">Check Answer</button>
     </div>
 
     <div id="spin-container" style="display: none">
