add styles and score view logic

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
   <body>
     <header>
       <h1>Jeopardy!</h1>
-      <span>Score: $<span id="score">0</span></span>
       <button id="start-reset-bttn">New Game</button>
+      <span style="display: none" id="score-box"
+        >Score: $<span id="score">0</span></span
+      >
     </header>
     <div style="display: none" id="clue-window">
       <div class="clue-box" id="clue-box" style="display: none">
